Closed Bug 1242210 Opened 8 years ago Closed 8 years ago

"destructor called on non-final" warning from UnionMember<RootedTypedArray>

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox47 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

Details

Attachments

(1 file)

New clang emits the following warning:

 4:44.82 /Users/ehsan/moz/src/obj-ff-safestack.noindex/dist/include/mozilla/dom/UnionMember.h:52:5: warning: destructor called on non-final 'mozilla::dom::RootedTypedArray<mozilla::dom::ArrayBufferView_base<&js::UnwrapArrayBufferView, &js::GetArrayBufferViewLengthAndData, &JS_GetArrayBufferViewType> >' that has virtual functions but non-virtual destructor [-Wdelete-non-virtual-dtor]
 4:44.82     mStorage.addr()->~T();
 4:44.82     ^
 4:44.82 /Users/ehsan/moz/src/obj-ff-safestack.noindex/dist/include/mozilla/dom/UnionTypes.h:326:29: note: in instantiation of member function 'mozilla::dom::UnionMember<mozilla::dom::RootedTypedArray<mozilla::dom::ArrayBufferView_base<&js::UnwrapArrayBufferView, &js::GetArrayBufferViewLengthAndData, &JS_GetArrayBufferViewType> > >::Destroy' requested here
 4:44.82     mValue.mArrayBufferView.Destroy();
 4:44.82                             ^
 4:44.82 /Users/ehsan/moz/src/obj-ff-safestack.noindex/dist/include/mozilla/dom/UnionMember.h:52:23: note: qualify call to silence this warning
 4:44.82     mStorage.addr()->~T();
 4:44.82                       ^
 4:44.82                       mozilla::dom::RootedTypedArray<mozilla::dom::ArrayBufferView_base<&js::UnwrapArrayBufferView, &js::GetArrayBufferViewLengthAndData, &JS_GetArrayBufferViewType> >::

which comes from the WebIDL codegen.
Attachment #8711377 - Flags: review?(amarchesini)
Attachment #8711377 - Flags: review?(amarchesini) → review+
https://hg.mozilla.org/mozilla-central/rev/ee5f9f94e211
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: