Bug 1242210 - Mark RootedTypedArray as final; r=baku